--- a/index.html
+++ b/index.html
@@ -1,29 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Office of Medicaid Innovation</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <!-- Add your CSS file here -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div id="logo">
-            <img src="logo.png" alt="OMI Logo">
-        </div>
+        <h1>Office of Medicaid Innovation</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about-us">About Us</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#team">Team</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+
     <main>
-        <section>
-            <h1 class="oswald-title">Welcome to the Office of Medicaid Innovation</h1>
-            <h2 class="georgia-subheader">About Us</h2>
-            <p class="verdana-body">The Office of Medicaid Innovation (OMI) is a specialty unit within the University of Illinois System...</p>
+        <section id="home">
+            <!-- Home content goes here -->
         </section>
-        <section>
-            <h1 class="oswald-title">Our Work</h1>
-            <h2 class="georgia-subheader">Projects</h2>
-            <p class="verdana-body">We are involved in a number of initiatives...</p>
+
+        <section id="about-us">
+            <!-- About Us content goes here -->
+        </section>
+
+        <section id="projects">
+            <!-- Projects content goes here -->
+        </section>
+
+        <section id="team">
+            <!-- Team content goes here -->
+        </section>
+
+        <section id="contact">
+            <!-- Contact content goes here -->
         </section>
     </main>
+
     <footer>
-        <img src="wave.png" alt="Wave Graphic">
+        <!-- Footer content goes here -->
     </footer>
 </body>
 </html>
