Added team section and updated mission statement

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         </section>
 
         <section id="about-us">
-            <!-- About Us content goes here -->
+            <h2>About Us</h2>
+            <p>Established in 2012 via Intergovernmental Agreement with the Illinois Department of Healthcare and Family Services (HFS), OMI is a specialty unit within the University of Illinois System that seeks to provide administrative, clinical, and operational services to HFS in support of its administration of Illinois’ Medicaid Program.</p>
         </section>
 
         <section id="projects">
@@ -35,7 +36,13 @@
         </section>
 
         <section id="team">
-            <!-- Team content goes here -->
+            <h2>Our Team</h2>
+            <ul>
+                <li>Ben Barnard</li>
+                <li>Keith Hickey</li>
+                <li>Michael Frye</li>
+                <li>Vinay Perni</li>
+            </ul>
         </section>
 
         <section id="contact">
