--- a/index.html
+++ b/index.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Office of Medicaid Innovation</title>
-    <!-- Add your CSS file here -->
+    <title>OMI Tech Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Office of Medicaid Innovation</h1>
+        <h1>OMI Tech</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
                 <li><a href="#about-us">About Us</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#team">Our Team</a></li>
+                <li><a href="#contact-us">Contact Us</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
-        <section id="home">
-            <!-- Home content goes here -->
-        </section>
-
         <section id="about-us">
             <h2>About Us</h2>
             <p>Established in 2012 via Intergovernmental Agreement with the Illinois Department of Healthcare and Family Services (HFS), OMI is a specialty unit within the University of Illinois System that seeks to provide administrative, clinical, and operational services to HFS in support of its administration of Illinois’ Medicaid Program.</p>
         </section>
-
-        <section id="projects">
-            <!-- Projects content goes here -->
+        <section id="services">
+            <h2>Our Services</h2>
+            <ul>
+                <li>Service 1</li>
+                <li>Service 2</li>
+                <li>Service 3</li>
+            </ul>
         </section>
-
         <section id="team">
             <h2>Our Team</h2>
             <ul>
@@ -44,20 +39,25 @@
                 <li>Vinay Perni</li>
             </ul>
         </section>
-
-        <section id="contact">
-            <!-- Contact content goes here -->
+        <section id="contact-us">
+            <h2>Contact Us</h2>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name"><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email"><br>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message"></textarea><br>
+                <button type="submit">Send</button>
+            </form>
         </section>
     </main>
     <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
-    <footer>
-        <!-- Footer content goes here -->
-    </footer>
     <script>
         function toggleDarkMode() {
             var body = document.querySelector('body');
             body.classList.toggle('dark-mode');
         }
-        </script>
+    </script>
 </body>
 </html>
