--- a/admin/index.html
+++ b/admin/index.html
@@ -7,6 +7,11 @@
     <title>Content Manager</title>
     <!-- Include the identity widget -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" type="text/javascript"></script>
+    <style>
+      body {
+        background-color: black;
+      }
+    </style>
   </head>
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
